# mo2fmu

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.adoc  README.md  check.sh  edo_exp.mo  generate-jupyter.sh  index.html  mo2fmu  mo2fmu.py  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  site.yml  sitemap.xml
.github/workflows/: ci.yml
docs/: antora.yml
docs/antora/supplemential-ui/partials/: header-content.hbs
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: configuration.adoc  examples.adoc  faq.adoc  index.adoc  overview.adoc  quickstart.adoc  troubleshooting.adoc  usage-cli.adoc  usage-python.adoc
docs/modules/ROOT/pages/env/: antora.adoc  cmake.adoc
mo2fmu/: configuration.html  examples.html  faq.html  index.html  overview.html  quickstart.html  troubleshooting.html  usage-cli.html  usage-python.html
mo2fmu/1.0.0/: configuration.html  examples.html  faq.html  index.html  overview.html  quickstart.html  troubleshooting.html  usage-cli.html  usage-python.html
mo2fmu/1.0.0/env/: antora.html  cmake.html  githubactions.html
mo2fmu/env/: antora.html  cmake.html  githubactions.html
src/cases/: ode_exp.mo  ode_sin.mo
src/python/feelpp/mo2fmu/: __init__.py  mo2fmu.py
src/python/feelpp/mo2fmu/compilers/: __init__.py  base.py  dymola.py  openmodelica.py
tests/: conftest.py  test_compilers.py  test_fmu_simulation.py  test_mo2fmu.py
tests/fixtures/models/: bouncing_ball.mo  multi_state.mo  ode_sinusoidal.mo  ode_with_input.mo  simple_ode.mo
