[metadata]
name = mo2fmu-feelpp
version = 0.0.6
author = Christophe Prudhomme
author_email = christophe.prudhomme@cemosis.fr
description = A modelica to fmu converter using dymola
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/feelpp/mo2fmu
project_urls =
    Bug Tracker = https://github.com/feelpp/mo2fmu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.0
scripts=mo2fmu
install_requires =
    click
    spdlog
    xvfbwrapper
    pathlib


[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    executable-name = package.module:function